improving concept to auto state naming, developing basics

--- a/test/nizzaTestApp/Gemfile
+++ b/test/nizzaTestApp/Gemfile
@@ -10,8 +10,10 @@ gem 'sqlite3'
 gem 'nice', :path => '../../'
 
 # eyes - friendly
-gem "twitter-bootstrap-rails"
+#gem "twitter-bootstrap-rails", :git => "git://github.com/elchbenny/twitter-bootstrap-rails.git", :branch => "static"
 
+
+#gem "therubyracer", :platform => :ruby
 # Gems used only for assets and not required
 # in production environments by default.
 group :assets do
@@ -19,7 +21,7 @@ group :assets do
   gem 'coffee-rails', '~> 3.2.1'
 
   # See https://github.com/sstephenson/execjs#readme for more supported runtimes
-  # gem 'therubyracer', :platform => :ruby
+#  gem 'therubyracer', :platform => :ruby
 
   gem 'uglifier', '>= 1.0.3'
 end
